--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,6 @@ jobs:
         run: black --check .
 
       - name: Run tests
-        run: pytest
+        run: |
+        export PYTHONPATH=.
+        python -m pytest
